# Inventory-System

./: README.md
StockProgram/: CMakeLists.txt  Inventory.cpp  Inventory.h  StockItem.cpp  StockItem.h  StockProgram.cpp  StockProgram.sln  StockProgram.vcxproj  StockProgram.vcxproj.filters
StockProgram/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.properties
StockProgram/nbproject/private/: private.xml
